--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/microservices": "^8.4.0",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
+    "dotenv": "^16.0.0",
     "jwks-rsa": "^2.0.5",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
