--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^8.4.0",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "dotenv": "^16.0.0",
+    "express-jwt": "^6.1.1",
     "jwks-rsa": "^2.0.5",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
