feat: added validation and authorization extras

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-AUTH0_ISSUER_URL=
-AUTH0_AUDIENCE=
+AUTH0_ISSUER_URL=https://quitter-dev.eu.auth0.com/
+AUTH0_AUDIENCE=http://localhost:3000
+port=3000
