--- a/.github/workflows/sonarcloud.js.yml
+++ b/.github/workflows/sonarcloud.js.yml
@@ -1,17 +1,11 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: Node.js CI
-
 on:
   push:
     branches: 
       - development
-      - feat/*
-  pull_request:
-    branches: 
       - master
-
+  pull_request:
+    types: [opened, synchronize, reopened]
+name: SonarCloud workflow
 jobs:
   sonarcloud:
     runs-on: ubuntu-latest
