--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,9 @@
 sonar.organization=mrsandyc
 sonar.projectKey=MrSandyC_Quitter-gateway
 
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.test.inclusions=[’.spec.ts’,’.test.ts’,’//*.spec.ts’,’//.test.ts’,’///.test.ts’,‘test/**/*.ts’]
+
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
 sonar.sources=.
